--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "dotenv": "^4.0.0",
     "express": "~4.15.5",
+    "midtrans-client": "^1.1.1",
     "request": "^2.83.0"
   },
   "devDependencies": {
